compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__signature_help__help_for_calling_module_function.snap
---
source: compiler-core/src/language_server/tests/signature_help.rs
expression: "\npub fn wibble(a: Int, b: String) { 1.0 }\n\npub fn main() {\n  wibble()\n}\n"
---
pub fn wibble(a: Int, b: String) { 1.0 }

pub fn main() {
  wibble()
         ↑
}


----- Signature help -----
wibble(Int, String) -> Float
       ▔▔▔

No documentation
