compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__signature_help__help_for_piped_imported_function_starts_from_second_argument.snap
---
source: compiler-core/src/language_server/tests/signature_help.rs
expression: "\nimport example\npub fn main() {\n    1 |> example.example_fn()\n}\n    "
---
import example
pub fn main() {
    1 |> example.example_fn()
                            ↑
}
    


----- Signature help -----
example.example_fn(Int, String) -> Nil
                        ▔▔▔▔▔▔

No documentation
