compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__signature_help__help_for_use_function_call_uses_precise_types_when_missing_some_arguments.snap
---
source: compiler-core/src/language_server/tests/signature_help.rs
expression: "\npub fn guard(a: Bool, b: a, c: fn() -> a) { 1.0 }\n\npub fn main() {\n    use <- guard(True,)\n}\n    "
---
pub fn guard(a: Bool, b: a, c: fn() -> a) { 1.0 }

pub fn main() {
    use <- guard(True,)
                      ↑
}
    


----- Signature help -----
guard(Bool, b, fn() -> b) -> Float
            ▔

No documentation
