compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__signature_help__help_shows_documentation_for_imported_function.snap
---
source: compiler-core/src/language_server/tests/signature_help.rs
expression: "\nimport example\npub fn main() {\n  example.example_fn()\n}\n"
---
import example
pub fn main() {
  example.example_fn()
                     ↑
}


----- Signature help -----
example.example_fn(Int, String) -> Nil
                   ▔▔▔

Documentation:
MarkupContent(
    MarkupContent {
        kind: Markdown,
        value: " Some doc!\n",
    },
)
